--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -73,7 +73,7 @@ body {
   margin-left: 30px;
 }
 .box-form .right {
-  padding: 40px;
+  padding: 80px;
   overflow: hidden;
 }
 @media (max-width: 980px) {
@@ -82,6 +82,10 @@ body {
   }
 }
 .box-form .right h5 {
+  font-size: 6vmax;
+  line-height: 0;
+}
+.box-form .right h4 {
   font-size: 6vmax;
   line-height: 0;
 }
